--- a/src/css/code.css
+++ b/src/css/code.css
@@ -3,8 +3,10 @@
     height: 100vh;
     background-color: rgb(0, 0, 0);
     color:white;
-    padding: 1rem;
+    padding: .4rem;
+    display: flex;
+    flex-direction: row;
 }
 .editorCover{
-    width: 50%;
+    width: 100;
 }
