--- a/src/css/output.css
+++ b/src/css/output.css
@@ -10,3 +10,17 @@
     width:49vw;
     background-color: rgb(44, 44, 44);
 }
+#OutputTextArea{
+    background-color: rgb(44, 44, 44);
+    height: 100%;
+    width: 100%;
+    color: white;
+    padding: .4rem;
+    margin-left: .2px;
+    text-overflow: inherit;
+    position: relative;
+    min-height: 100%;
+    min-width: 100%;
+    max-height: 100%;
+    max-width: 100%;
+}
