--- a/src/css/code.css
+++ b/src/css/code.css
@@ -1,6 +1,13 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
 .Box{
+    position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
     background-color: rgb(0, 0, 0);
     color:white;
     padding: .4rem;
@@ -8,5 +15,5 @@
     flex-direction: row;
 }
 .editorCover{
-    width: 100;
+    width: 100%;
 }
