--- a/src/css/output.css
+++ b/src/css/output.css
@@ -6,7 +6,12 @@
     height: 2.45rem;
 }
 .outputBox{
-    height:88vh;
+    height:44vh;
+    width:49vw;
+    background-color: rgb(44, 44, 44);
+}
+.inputBox{
+    height:37vh;
     width:49vw;
     background-color: rgb(44, 44, 44);
 }
@@ -23,4 +28,33 @@
     min-width: 100%;
     max-height: 100%;
     max-width: 100%;
+    transition: 2s;
+    z-index: 2;
+}
+#InputTextArea{
+    background-color: rgb(44, 44, 44);
+    height: 100%;
+    width: 100%;
+    color: white;
+    padding: .4rem;
+    margin-left: .2px;
+    text-overflow: inherit;
+    position: relative;
+    min-height: 100%;
+    min-width: 100%;
+    max-height: 100%;
+    max-width: 100%;
+}
+.Zoom{
+    position: absolute;
+    right: 1rem;
+    top:3.6rem;
+    width: 35px;
+    height: 35px;
+    z-index: 3;
+}
+#inlargeImg{
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
 }
